--- a/searx/templates/oscar/index.html
+++ b/searx/templates/oscar/index.html
@@ -4,12 +4,9 @@
     <div class="row">
         <div class="text-center col-sm-12 col-md-12">
             {% if cookies['oscar-style'] == 'pointhi' %}
-                <h1 class="text-hide center-block"><img class="center-block img-responsive" src="{{ url_for('static', filename='img/searx_logo.png') }}" alt="searx logo"/>searx</h1>
+                <h1 class="text-hide center-block">searx</h1>
             {% else %}
-                <h1 class="text-hide center-block" id="main-logo">
-                    <img class="center-block img-responsive" src="{{ url_for('static', filename='img/logo_searx_a.png') }}" alt="searx logo" />
-                    searx
-                </h1>
+                <h1 class="text-hide center-block" id="main-logo">searx</h1>
             {% endif %}
         </div>
     </div>
