--- a/searx/templates/oscar/base.html
+++ b/searx/templates/oscar/base.html
@@ -82,12 +82,7 @@
             {% block footer %}
             {% endblock %}
             <p class="text-muted">
-                <small>
-                    {{ _('Powered by') }} <a href="https://asciimoo.github.io/searx/">searx</a> - {{ searx_version }} - {{ _('a privacy-respecting, hackable metasearch engine') }}<br/>
-                    <a href="https://github.com/asciimoo/searx">{{ _('Source code') }}</a> |
-                    <a href="https://github.com/asciimoo/searx/issues">{{ _('Issue tracker') }}</a> |
-                    <a href="https://github.com/asciimoo/searx/wiki/Searx-instances">{{ _('Public instances') }}</a>
-                </small>
+                <small>{{ _('Powered by') }} <a href="https://asciimoo.github.io/searx/">searx</a> - {{ searx_version }}</small>
             </p>
         </div>
     </div>
